--- a/About/about-me.html
+++ b/About/about-me.html
@@ -20,7 +20,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
   <link rel="stylesheet" type="text/css" href="../pagestyle.css">
@@ -60,25 +61,47 @@
     <div class = "jumbotron jumbotron-fluid" id = "jumbo-intro">
 
         <div class = "d-flex justify-content-center">
-            <h1>About</h1>
+            <h1>ABOUT ME</h1>
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-8">
+            <div class = "col-sm-6">
                 <hr>
             </div>
         </div>
 
         <div class = "small-spacer">
         </div>
+
+
+        <div class = "d-flex justify-content-center">
+          <div class = "col-sm-3">
+            <img src = "Images/profilepicture.jpeg" class = "profile img-fluid" alt = "photo of Ruta Gokhale">
+          </div>
+        </div>
+
         <div class = "small-spacer">
         </div>
         <div class = "small-spacer">
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-3">
-                <img src = "Images/portfoliopicture.jpeg" class = "img-fluid mx-auto d-block" alt = "photo of Ruta Gokhale">
+            <div class = "col-sm-7">
+              <p>Hey there! I am Ruta Gokhale. I like chocolate chip cookies, morning hikes, making art, and lazy afternoons!<br>
+                I am a User Experience Designer - what that means is,
+                I solve different kinds of problems! I spend most of my time talking to a lot of people, asking many questions, sketching ideas, and ultimately making sure the problem has an effective solution.</p>
+              <p>I believe design is a process, not a result. It is a mindset that helps you find the right solution to the right problem.
+                After working for 4+ years in the enterprise software space, I've come to realize, problems come with ambiguities and their fair share of constraints.
+                And therefore, I think two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i>&nbsp the box.</p>
+              <p>Most recently, I worked at Collibra, designing experiences for a SaaS offering that enables privacy teams to create policies that protect
+                sensitive information in an organization and optimize access management. Previously, I have worked at Thomson Reuters and Menlo Innovations
+                designing web-based enterprise software and workflows.</p>
+              <p>I have always thought of myself as a student of science with a passion for art. So when I stumbled upon the field of Design, I had to go for it!
+                I completed my Bachelor's degree in Computer Science. I then pursued a Master's degree in Human-Computer Interaction from
+                the University of Michigan, Ann Arbor (Go Blue!). Today, I consider myself lucky to work in a role where engineering, design, and people converge.</p>
+              <p>If you want to chat about design, or simply get in touch, reach out to me via
+              <a id = "link" target="_blank" href="https://www.linkedin.com/in/rutagokhale/">LinkedIn</a> or email (<strong>ruta.gokhale6@gmail.com</strong>).
+              I am always down for a cup of coffee or a good conversation!</p>
             </div>
         </div>
 
@@ -86,13 +109,51 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-8">
-                <p>Hi there, I am Ruta Gokhale, a User Experience Designer. I like chocolate chip cookies, walks in the park, and well-crafted experiences!</p>
-                <p>I believe design is a process, not a result. It is a mindset that helps you find the right solution to the right problem. After working for 4 years in the enterprise software space, I've come to realize, problems come with ambiguities and their fair share of constraints. And therefore, I think two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i> the box.</p>
-                <p>Right now, I design experiences at Collibra, a Data Intelligence and Data Governance company, which offers solutions for managing meta-data in an organization. I specifically work on Collibra Protect, a SaaS offering that enables privacy stewards to create policies that protect sensitive information and optimize access management. Previously I have worked as a UX Designer at Thomson Reuters and Product Designer at Menlo Innovations.</p>
-                <p>I have always thought of myself as a student of science with a passion for art. So when I stumbled upon the field of Design, I had to go for it! I completed my Bachelor's degree in Computer Science. I then pursued a Master's degree in Human-Computer Interaction from the University of Michigan, Ann Arbor (Go Blue!). Today, I consider myself lucky to work in a role where engineering, design, and people converge.</p>
-                <p>I would love to connect with you - you can get in touch with me through <a id = "link" target="_blank" href="https://www.linkedin.com/in/rutagokhale/">LinkedIn</a> or <a id = "link" target="_blank" href="mailto: ruta.gokhale6@gmail.com">email</a>. I am always down for a cup of hot coffee and a good conversation!</p>
+            <h2>MORE ABOUT ME</h2>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "container container-fluid">
+          <div class = "d-flex justify-content-center">
+            <div class = "row">
+
+              <div class="col-md-4">
+                <div class = "card">
+                    <a target="_blank" href = "https://www.instagram.com/thecolorstrokes/?hl=en">
+                        <img src = "Images/artcover.png" class = "card-img-top img-fluid" alt = "Art thumbnail">
+                        <div class="card-body">
+                            <p class = "card-text">I like making art, creating paintings with different media, and capturing day-to-day snippets of my life.</p>
+                        </div>
+                    </a>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class = "card">
+                    <a target="_blank" href = "https://medium.com/@rutagokhale">
+                        <img src = "Images/mediumcover.png" class = "card-img-top img-fluid" alt = "Medium blog thumbnail">
+                        <div class="card-body">
+                            <p class = "card-text">I occasionally like to pen down my thoughts about design and other side projects.</p>
+                        </div>
+                    </a>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class = "card">
+                    <a target="_blank" href = "https://open.spotify.com/episode/5kBCDjCDsw9Sw6sWJcROcw?si=Jz1bNw6mT8eFiau_064I8w">
+                        <img src = "Images/podcastcover.png" class = "card-img-top img-fluid" alt = "Podcast episode thumbnail">
+                        <div class="card-body">
+                            <p class = "card-text">I recorded a podcast episode with my friend where we discussed how design impacts our non-work lives.</p>
+                        </div>
+                    </a>
+                </div>
+              </div>
+
             </div>
+          </div>
         </div>
 
 
@@ -109,7 +170,7 @@
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
             <div class = "container-fluid">
-                <p class = "text-center" id = "text-footer">&copy; 2022 Ruta Gokhale. All rights reserved.</p>
+                <p class = "text-center" id = "text-footer">&copy; 2023 Ruta Gokhale. All rights reserved.</p>
             </div>
         </footer>
     </div>
