--- a/Work/thomson-reuters.html
+++ b/Work/thomson-reuters.html
@@ -20,7 +20,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
   <link rel="stylesheet" type="text/css" href="../pagestyle.css">
@@ -63,11 +64,11 @@
     <div class = "jumbotron jumbotron-fluid" id = "jumbo-intro">
 
         <div class = "d-flex justify-content-center">
-            <h1>Thomson Reuters</h1>
+            <h1>THOMSON REUTERS</h1>
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-8">
+            <div class = "col-sm-6">
                 <hr>
             </div>
         </div>
@@ -80,19 +81,10 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6" id="info">
-                <p><a id = "link" target="_blank" href="https://tax.thomsonreuters.com/en">Thomson Reuters</a> builds and sells tax, accounting, and compliance solutions. I work as a UX Designer on the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms and businesses.</span> I cannot share the details of my work as it is under an NDA, but I can talk about the design process I use in my projects.</p>
-            </div>
-        </div>
-
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>Over the past two years, I've worked on multiple projects, collaborated with different stakeholders, and produced deliverables at different levels of fidelity. <span id="imp">I've improved the usability of existing features, designed new features based on product roadmaps, and been involved in various user research sessions.</span></p>
+            <div class = "col-sm-7">
+                <p><a id = "link" target="_blank" href="https://tax.thomsonreuters.com/en">Thomson Reuters</a> makes tax, accounting, and compliance solutions.
+                  I worked as a UX Designer for the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms and businesses.</span>
+                  I cannot share all the details of my work, but I can talk about the design process I use in my projects.</p>
             </div>
         </div>
 
@@ -100,14 +92,24 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>As an organization, our transition from desktop products to web-based software hasn't been easy. Within the design organization, we've faced some challenges. However, our design culture has improved considerably since I started working here, and I've seen many positive changes. Over the last year, we've refined our design process to have frequent touchpoints and critique sessions, and collaborate more closely with our product partners, integrating their input from early on.</p>
-                <p>Here's a brief snapshot of the design process:</p>
+            <div class = "col-sm-7">
+                <p>I worked on multiple projects, collaborated with different stakeholders, and produced deliverables with various levels of fidelity.
+                  <span id="imp">I improved the usability of existing features, designed new features based on product roadmaps, and was involved in various user research sessions.</span>
+                </p>
             </div>
         </div>
 
         <div class = "small-spacer">
         </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-7">
+                <p>Within the design organization, we’ve faced some challenges. However, our design culture and processes improved considerably since I started,
+                  and have seen many positive changes. We refined our design process to have frequent touchpoints and critique sessions, and collaborate more closely with our
+                  product partners to integrate their input from early on. A brief snapshot of the process - </p>
+            </div>
+        </div>
+
         <div class = "small-spacer">
         </div>
 
@@ -123,34 +125,23 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <h2>Reflections</h2>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>
-                    <ul>
-                        <li>The majority of my job is dependent on <span id="imp">effective communication.</span>
-                            <ul>
-                                <li><span id="imp">Communicating how a design works</span>, and making sure everyone understands it.</li>
-                                <li>Defending my design decisions where necessary.</li>
-                                <li><span id="imp">Communicating the impact</span> of the proposed design.</li>
-                            </ul>
-                        </li>
-                        <li id = "list-spacing">With software that's already been used by a large number of customers, it is difficult to implement a new design all at once. So as a designer, being proactive in thinking about a potential rollout plan can lead to a strong partnership with the engineering team.</li>
-                        <li id = "list-spacing">I've come to realize the importance of maintaining project documentation. <span id="imp">It is worth investing the extra time in making sure that the relevant touchpoints and decisions are recorded.</span> Similarly, a well-organized design file can go a long way!</li>
-                    </ul>
+            <div class = "col-sm-7">
+                <p>The most important thing I learned during my time at Thomson Reuters was the importance of communication -
+                  <span id="imp">communicating clearly how a design works, communicating the impact of the proposed design, and then defending those decisions where necessary.</span>
+                  With software that's already being used by a large number of customers, it is difficult to implement a new design all at once. So as a designer,
+                  I had to be proactive in thinking about a potential rollout plan.
                 </p>
             </div>
         </div>
+
+
+
     </div>
 
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
             <div class = "container-fluid">
-                <p class = "text-center" id = "text-footer">&copy; 2021 Ruta Gokhale. All rights reserved.</p>
+                <p class = "text-center" id = "text-footer">&copy; 2023 Ruta Gokhale. All rights reserved.</p>
             </div>
         </footer>
     </div>
