--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   <meta name = "viewport" content = "width = device-width, initial-scale = 1, shrink-to-fit=no">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129163781-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129163781-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-129163781-1');
-  </script>
+  </script> -->
 
   <!--Bootstrap Files-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -57,177 +58,134 @@
         </div>
     </nav>
 
-    <div class = "spacer">
+    <div class = "small-spacer">
     </div>
-
-
-    <div class = "jumbotron jumbotron-fluid" id = "intro-section">
-        <div class = "d-flex justify-content-center">
-                <div class="col-md-6">
-                    <p>Hey there! I am</p>
-                    <a href="About/about-me.html">
-                        <h1 class="title">Ruta Gokhale</h1>
-                    </a>
-                    <div class = "small-spacer">
-                    </div>
-                    <p>a User Experience Designer with 4 years of experience in designing enterprise software.</p>
-                </div>
-        </div>
-    </div>
-
-    <div id = "work">
+    <div class = "small-spacer">
     </div>
     <div class = "small-spacer">
     </div>
 
+
+
+  <div class = "jumbotron jumbotron-fluid d-flex justify-content-center" id = "intro-section">
+    <div class="col-md-6">
+      <p>Hey there!&nbsp I am</p>
+      <a href="About/about-me.html">
+        <h1 class="title">RUTA GOKHALE</h1>
+      </a>
+      <p>a UX Designer who embraces the complexity of enterprise products to<br>
+      produce thoughtful workflows that address the underlying usability problems.
+    </p>
+    </div>
+    <div class="col-md-1 giffy">
+      <img src = "Images/thoughts.gif" class = "img-fluid" alt = "GIF that depicts throught process">
+    </div>
+  </div>
+
+
+  <div class = "d-flex justify-content-center" id="work">
+      <h2>WORK</h2>
+  </div>
+
+  <div class = "small-spacer">
+  </div>
+
+  <div class = "container container-fluid">
     <div class = "d-flex justify-content-center">
-        <h2>Work</h2>
-    </div>
+      <div class = "row">
 
-    <div class = "small-spacer">
-    </div>
-
-    <div class = "container container-fluid">
-
-        <div class = "d-flex justify-content-center">
-            <div class = "small-spacer">
-            </div>
-
-            <div class="col-md-8">
-
-                <div class = "card">
-                    <a href = "Work/thomson-reuters.html">
-                        <img src = "Images/thomsonreuterscover.png" class = "card-img-top img-fluid" alt = "Thomson Reuters project thumbnail">
-                        <div class="card-body">
-                            <h3 class = "card-title">Thomson Reuters</h3>
-                            <p class = "card-text">UX Designer working on web-based, tax and accounting software.</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class = "small-spacer">
-                </div>
-                <div class = "small-spacer">
-                </div>
-                <div class = "small-spacer">
-                </div>
-
-                <div class = "card">
-                    <a href = "Work/menlo-innovations.html">
-                        <img src = "Images/menloinnovationscover.png" class = "card-img-top img-fluid" alt = "Menlo project thumbnail">
-                        <div class="card-body">
-                            <h3 class = "card-title">Menlo Innovations</h3>
-                            <p class = "card-text">Product Designer at an agency designing for B2B software.</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class = "small-spacer">
-                </div>
-                <div class = "small-spacer">
-                </div>
-                <div class = "small-spacer">
-                </div>
-
-                <div class = "card">
-                    <a href = "Work/truesafe-connect.html">
-                        <img src = "Images/truesafeconnectcover.png" class = "card-img-top img-fluid" alt = "Thomson Reuters project thumbnail">
-                        <div class="card-body">
-                            <h3 class = "card-title">TrueSafe Connect</h3>
-                            <p class = "card-text">Wireframes for a mobile app that tracks fire and gas sensors, and is hosted on the Play Store.</p>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
+        <div class="col-md-4">
+          <div class = "card">
+              <a href = "Work/collibra.html">
+                  <img src = "Images/collibracover.png" class = "card-img-top img-fluid" alt = "Collibra project thumbnail">
+                  <div class="card-body">
+                      <h3 class = "card-title d-flex justify-content-center">COLLIBRA</h3>
+                      <p class = "card-text text-center">Co-led design efforts for a new <br> data-privacy SaaS feature launch.</p>
+                  </div>
+              </a>
+          </div>
         </div>
 
-    </div>
+        <div class="col-md-4">
+          <div class = "card">
+              <a href = "Work/thomson-reuters.html">
+                  <img src = "Images/thomsonreuterscover.png" class = "card-img-top img-fluid" alt = "Thomson Reuters project thumbnail">
+                  <div class="card-body">
+                      <h3 class = "card-title d-flex justify-content-center">THOMSON REUTERS</h3>
+                      <p class = "card-text text-center">Designs and workflows for web-based tax and accounting software.</p>
+                  </div>
+              </a>
+          </div>
+        </div>
 
-    <div class = "spacer">
-    </div>
-    <div class = "small-spacer">
-    </div>
-    <div class = "small-spacer">
-    </div>
+        <div class="col-md-4">
+          <div class = "card">
+              <a href = "Work/menlo-innovations.html">
+                  <img src = "Images/menlocover.png" class = "card-img-top img-fluid" alt = "Menlo Innovations project thumbnail">
+                  <div class="card-body">
+                      <h3 class = "card-title d-flex justify-content-center">MENLO INNOVATIONS</h3>
+                      <p class = "card-text text-center">Consulted clients for UX design, research and strategy needs.</p>
+                  </div>
+              </a>
+          </div>
+        </div>
 
+      </div>
+    </div>
+  </div>
 
+  <div class = "spacer">
+  </div>
+  <div class = "small-spacer">
+  </div>
+
+  <div class = "d-flex justify-content-center">
+      <h2>PROJECTS</h2>
+  </div>
+
+  <div class = "small-spacer">
+  </div>
+
+  <div class = "container container-fluid">
     <div class = "d-flex justify-content-center">
-        <h2>My Passion Projects!</h2>
-    </div>
+      <div class = "row d-flex justify-content-center">
 
-    <div class = "small-spacer">
-    </div>
-
-    <div class="container container-fluid">
-        <div class="row d-flex justify-content-center">
-
-            <div class = "card-deck col-md-10">
-
-                <div class="card mx-4">
-                    <a target="_blank" href="https://www.instagram.com/thecolorstrokes/?hl=en">
-                        <img src="Images/painting.jpg" class = "card-img-top img-fluid" alt = "An acrylic painting of a sunset hung on the wall">
-                        <div class="card-body">
-                            <p>I love making art and creating paintings in different mediums. Take a look at my virtual gallery.</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="card mx-4">
-                    <a target="_blank" href="https://open.spotify.com/episode/5kBCDjCDsw9Sw6sWJcROcw?si=Jz1bNw6mT8eFiau_064I8w">
-                        <img src="Images/podcast.PNG" class = "card-img-top img-fluid" alt = "screenshot of the podcast episode as seen on Spotify">
-                        <div class="card-body">
-                            <p>I recorded a podcast episode with my friend where we discussed understanding human behavior as part of our jobs and how it impacts us! Check it out.</p>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
+        <div class="col-md-4">
+          <div class = "card">
+              <a href = "Projects/truesafeconnect.html">
+                  <img src = "Images/truesafecover.png" class = "card-img-top img-fluid" alt = "TrueSafe Connect project thumbnail">
+                  <div class="card-body">
+                      <h3 class = "card-title d-flex justify-content-center">TRUESAFE CONNECT</h3>
+                      <p class = "card-text text-center">Wireframes for a mobile app to track fire and gas sensors.</p>
+                  </div>
+              </a>
+          </div>
         </div>
 
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
+        <div class="col-md-4">
+          <div class = "card">
+              <a href = "Projects/datavizprojects.html">
+                  <img src = "Images/dvcover.png" class = "card-img-top img-fluid" alt = "Data Visualizations project thumbnail">
+                  <div class="card-body">
+                      <h3 class = "card-title d-flex justify-content-center">DATA VISUALIZATIONS</h3>
+                      <p class = "card-text text-center">Data Visualizations and art to better understand and interpret data.</p>
+                  </div>
+              </a>
+          </div>
         </div>
 
-        <div class="row d-flex justify-content-center">
-            <div class = "card-deck col-md-10">
-
-                <div class="card mx-4">
-                    <a target="_blank" href="https://medium.com/@rutagokhale">
-                        <img src="Images/medium.png" class = "card-img-top img-fluid" alt = "a graphic to represent thinking and creativity">
-                        <div class="card-body">
-                            <p>I occasionally like to pen down my thoughts about design and other side projects. Give it a read.</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="card mx-4">
-                    <a href="About/datavizprojects.html">
-                        <img src="Images/sugarincereal.png" class = "card-img-top img-fluid" alt = "a data visualization of sugar per serving in popular cereals">
-                        <div class="card-body">
-                            <p>I like to create data visualizations and art to better understand and interpret data. Go through my projects.</p>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 
 
-    <div class = "spacer">
-    </div>
-    <div class = "small-spacer">
-    </div>
-
+  <div class = "spacer">
+  </div>
 
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
             <div class = "container-fluid">
-                <p class = "text-center" id = "text-footer">&copy; 2021 Ruta Gokhale. All rights reserved.</p>
+                <p class = "text-center" id = "text-footer">&copy; 2023 Ruta Gokhale. All rights reserved.</p>
             </div>
         </footer>
     </div>
