--- a/Work/menlo-innovations.html
+++ b/Work/menlo-innovations.html
@@ -21,6 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
   <link rel="stylesheet" type="text/css" href="../pagestyle.css">
@@ -63,11 +64,11 @@
     <div class = "jumbotron jumbotron-fluid" id = "jumbo-intro">
 
         <div class = "d-flex justify-content-center">
-            <h1>Menlo Innovations</h1>
+            <h1>MENLO INNOVATIONS</h1>
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-8">
+            <div class = "col-sm-6">
                 <hr>
             </div>
         </div>
@@ -80,46 +81,43 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6" id="info">
-                <p><a id = "link" target="_blank" href="https://menloinnovations.com/">Menlo Innovations</a> is a design and development agency based in Ann Arbor, MI. As a Product Designer, my role was largely focused on doing UX design work, accompanied by user research and product strategy. I cannot share the details of my work as it is under an NDA, but I can talk about the design process at Menlo.</p>
+            <div class = "col-sm-7">
+                <p><a id = "link" target="_blank" href="https://menloinnovations.com/">Menlo Innovations</a> is a design and development agency based in Ann Arbor, MI.
+                  As a Product Designer, my role was largely focused on doing UX design work, accompanied by user research and product strategy.</p>
             </div>
         </div>
 
         <div class = "small-spacer">
         </div>
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>As a designer at Menlo,
+            <div class = "col-sm-7">
+                <p>As a designer at Menlo,</p>
                     <ul>
-                        <li>I was <span id="imp">paired with a fellow designer throughout the day.</span> To paint you a picture, that meant sharing a single computer, mouse, and keyboard between two people!</li>
-                        <li>I <span id="imp">co-designed wireframes for various B2B software.</span> To enable effective collaboration, I practiced thinking out loud and asking for feedback often.</li>
-                        <li>I worked in agile teams that operated on a weekly cadence. As designers, along with the actual design work, we <span id="imp">estimated user stories, provided design support to front-end developers, and presented our work to clients.</span></li>
-                        <li>I <span id="imp">wrote user stories</span> for every design I created, <span id="imp">describing the intent and specs</span> for the developers to work on.</li>
+                        <li>I was <span id="imp">paired with a fellow designer throughout the day.</span> To paint you a picture, that meant sharing a
+                          single computer, mouse, and keyboard between two people!</li>
+                        <li>I <span id="imp">co-designed wireframes for various B2B software.</span> To enable effective collaboration,
+                          I practiced thinking out loud and asking for feedback often.</li>
+                        <li>I worked in agile teams that operated on a weekly cadence. As designers, we also
+                          <span id="imp">estimated user stories, provided design support to front-end developers, and presented our work to clients.</span></li>
+                        <li>I <span id="imp">wrote user stories</span> for every design I created, <span id="imp">describing the intent and specs</span>
+                          for the developers to work on.</li>
                         <li>I collaborated with the Project Manager for <span id="imp">planning, prioritizing, and scheduling work</span> based on business outcomes and user data.</li>
                     </ul>
                 </p>
             </div>
         </div>
 
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
+            <div class = "col-sm-7">
                 <p>Across different projects, I worked in these domains - furniture data management, church participation tracking, speaking bureaus, custom accounting systems, etc.</p>
-                <p id="second-para">At Menlo, we followed a discovery and design process that used to be modified for different projects, based on client requirements, project outcomes, timelines, and budget. The process was aimed at <span id="imp">helping clients think about the big picture and prioritize their business objectives.</span></p>
+                <p id="second-para">At Menlo, we followed a discovery and design process that was modified for different projects, based on
+                  client requirements, project outcomes, timelines, and budgets. The process was aimed at 
+                  <span id="imp">helping clients think about the big picture and prioritize their business objectives.</span></p>
             </div>
         </div>
 
-        <div class = "small-spacer">
-        </div>
         <div class = "small-spacer">
         </div>
 
@@ -135,20 +133,13 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <h2>Reflections</h2>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>
-                    <ul>
-                        <li><span id="imp">My biggest takeaway was approaching the UX process as a risk mitigation tool!</span> The user-centered design process helps you to test hypotheses, validate assumptions, and pivot when necessary. If done right, this can effectively help save on the development effort of a product. <span id="imp">Helping clients think about the design and discovery work through this lens convinced them to invest in this process.</span></li>
-                        <li id = "list-spacing"><span id="imp">In diagnosing a problem, it is important to understand whether we're tackling the symptom or treating the actual problem.</span></li>
-                        <li id = "list-spacing"><span id="imp">All problems don't necessarily have a software-based solution.</span> Sometimes, it's the process (workflow outside of using the software/tool) that needs to be modified to solve the problem.</li>
-                    </ul>
-                </p>
+            <div class = "col-sm-7">
+              <p>Working in an agency-based company, <span id="imp">my biggest takeaway was approaching the UX process as a risk mitigation tool!</span>
+              The user-centered design process helps you to test hypotheses, validate assumptions, and pivot when necessary.
+              If done right, this can effectively help save on the development effort of a product. <span id="imp">Helping clients think about the design and discovery
+                work through this lens convinced them to invest in this process.</span></p>
+              <p id="second-para">Another important realization was, <span id="imp">all problems don't necessarily have a software-based solution.</span>
+              Sometimes, it's the process (workflow outside of using the software/tool) that needs to be modified to solve the problem.</p>
             </div>
         </div>
     </div>
@@ -158,7 +149,7 @@
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
             <div class = "container-fluid">
-                <p class = "text-center" id = "text-footer">&copy; 2021 Ruta Gokhale. All rights reserved.</p>
+                <p class = "text-center" id = "text-footer">&copy; 2023 Ruta Gokhale. All rights reserved.</p>
             </div>
         </footer>
     </div>
