--- a/Work/collibra.html
+++ b/Work/collibra.html
@@ -80,11 +80,14 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p><a target="_blank" href="https://www.collibra.com/us/en/company/who-we-are" id = "link">Collibra</a> is a data intelligence and governance company.
-                  Collibra has a suite of products as a master meta-data management company. I worked as a Sr. UX Designer for the
-                  <a target="_blank" href="https://www.collibra.com/us/en/products/protect" id = "link">Protect</a> product. Collibra Protect allows
-                  <span id="imp">privacy teams to streamline data access for organizational data through policy creation and permissions.</span>
-                </p>
+                <p><a target="_blank" href="https://www.collibra.com/us/en/company/who-we-are" id = "link">Collibra</a> is a data intelligence and data governance company.
+                  Collibra provides a suite of SaaS products, specializing as a master meta-data management company. I worked as a Sr. User Experience Designer
+                  on the Protect product. <span id="imp"> <a target="_blank" href="https://www.collibra.com/us/en/products/protect" id = "link">Collibra Protect</a>
+                allows privacy teams to streamline access to organizational data through a set of rules and permissions.</span><br>
+                I have outlined details about my work for Collibra Protect in this case study. Please email me at <strong>ruta.gokhale6@gmail.com</strong>
+                  to access it.<br>
+                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study (password protected)</a></p>
+
             </div>
         </div>
 
@@ -93,9 +96,11 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-              <p>Please email me at <strong>ruta.gokhale6@gmail.com</strong> if you're interested in going through this case study.
-              I have outlined details about my work for Collibra Protect in this document.<br>
-              <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study (password protected)</a></p>
+              <p>In my role as a designer,<br>
+              — &nbsp I improved the overall usability of the application, specifically the access rule creation feature which forms the crux of the application.<br>
+              — &nbsp Led the beta program to get feedback from prospective customers in partnership with UX research, product management, and Customer Success Manager.<br>
+              — &nbsp Facilitated strategic conversations and working sessions with the product team for planning work, navigating technical challenges, and cross-functional collaboration.
+              </p>
             </div>
         </div>
 
@@ -104,34 +109,29 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>At Collibra, I got the opportunity to lead and co-own different projects. As a designer it allowed me to take on different roles and work in a
-                  more collaborative manner. Reflecting on my work and responsibilities, these were some of the things I did (beyond design) -</p>
+                <p>At Collibra, I got the opportunity to lead and co-own different projects. Reflecting on my work and responsibilities,
+                  these were some of the things I did - </p>
                   <ul>
-                      <li><h3>Stakeholder alignment</h3>
-                        <p>This was the most important part of my job, especially during the initial stages of a project.
-                        I worked with the Product Manager to scope the project and get to the “why” by really understanding the problem.
-                        It was important to review available user data and take informed next steps.</p></li>
-                      <li><h3>Establish a continuous feedback loop with the developers</h3>
-                        <p>My product partners and development team had evolved their work style to a fairly mature way of agile development.
-                        As such, I developed design touchpoints to support their way of working, especially when it came to UI details and design QA.</p></li>
-                      <li><h3>Improving the design process to support project and team needs</h3>
-                        <p>The needs of the project and team are ever-changing. The team and I used to discuss ways to improve our collaboration, be it through mini-workshops,
-                        frequent touchpoints, clearer user stories, or specific Slack updates. This was a fun part of my job where all of us were working towards a common goal
-                        of making collaboration effective and efficient.</p></li>
-                      <li><h3>Collaborating successfully across time zones</h3>
-                        <p>I am based in San Diego, California; while my team (including PM, entire dev team, and lead designer) was based in Europe.
-                        It was a tough challenge to find common work and collaboration slots, but we made it work! I learned to master the art of asynchronous updates
-                        and design documentation.</p></li>
+                      <li><h3>Achieve stakeholder alignment</h3>
+                        <p>This was the most important part of my job, especially during the initial stages of a project. I worked with the product manager to
+                          scope features by reviewing available data and taking informed next steps.</p></li>
+                      <li><h3>Evolve the design process</h3>
+                        <p>This was a fun part of my job where all of us were working towards a common goal of making collaboration effective and efficient,
+                          be it through mini-workshops, frequent touchpoints, clearer user stories, or specific Slack updates. </p></li>
+                      <li><h3>Collaborate successfully across time zones</h3>
+                        <p>I joined this company and my team remotely. My product team and I were separated by a 9-hour time difference. I improved my skills
+                          in design documentation and written collaboration which allowed for asynchronous communication.</p></li>
                   </ul>
             </div>
         </div>
 
-
+        <div class = "small-spacer">
+        </div>
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>This was really the first time where I was in a position to lead things and work in a start-up-like environment.
-                  It was genuinely an amazing experience full of growth and learning.</p>
+                <p>This was really the first time where I was in a position to lead things. This experience helped me build my skillset beyond
+                  the hard design skills. Working in this start-up environment was an experience full of growth and learning.</p>
             </div>
         </div>
 
