--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <a href="About/about-me.html">
         <h1 class="title">RUTA GOKHALE</h1>
       </a>
-      <p>a UX Designer who embraces the complexity of enterprise products to<br>
-      produce thoughtful workflows that address the underlying usability problems.
+      <p>a UX Designer creating thoughtful and scalable workflows<br>
+      by embracing the complexity of enterprise software and SaaS products.
     </p>
     </div>
     <div class="col-md-1 giffy">
@@ -100,7 +100,7 @@
                   <img src = "Images/collibracover.png" class = "card-img-top img-fluid" alt = "Collibra project thumbnail">
                   <div class="card-body">
                       <h3 class = "card-title d-flex justify-content-center">COLLIBRA</h3>
-                      <p class = "card-text text-center">Co-led design efforts for a new <br> data-privacy SaaS feature launch.</p>
+                      <p class = "card-text text-center">Co-led design efforts to launch a new data-security application</p>
                   </div>
               </a>
           </div>
@@ -112,7 +112,7 @@
                   <img src = "Images/thomsonreuterscover.png" class = "card-img-top img-fluid" alt = "Thomson Reuters project thumbnail">
                   <div class="card-body">
                       <h3 class = "card-title d-flex justify-content-center">THOMSON REUTERS</h3>
-                      <p class = "card-text text-center">Designs and workflows for web-based tax and accounting software.</p>
+                      <p class = "card-text text-center">Improved existing features for web-based tax software</p>
                   </div>
               </a>
           </div>
@@ -124,7 +124,7 @@
                   <img src = "Images/menlocover.png" class = "card-img-top img-fluid" alt = "Menlo Innovations project thumbnail">
                   <div class="card-body">
                       <h3 class = "card-title d-flex justify-content-center">MENLO INNOVATIONS</h3>
-                      <p class = "card-text text-center">Consulted clients for UX design, research and strategy needs.</p>
+                      <p class = "card-text text-center">Consulted clients for UX design and strategy needs</p>
                   </div>
               </a>
           </div>
@@ -156,7 +156,7 @@
                   <img src = "Images/truesafecover.png" class = "card-img-top img-fluid" alt = "TrueSafe Connect project thumbnail">
                   <div class="card-body">
                       <h3 class = "card-title d-flex justify-content-center">TRUESAFE CONNECT</h3>
-                      <p class = "card-text text-center">Wireframes for a mobile app to track fire and gas sensors.</p>
+                      <p class = "card-text text-center">Designed wireframes to track gas leak sensors on a strict timeline</p>
                   </div>
               </a>
           </div>
@@ -168,7 +168,7 @@
                   <img src = "Images/dvcover.png" class = "card-img-top img-fluid" alt = "Data Visualizations project thumbnail">
                   <div class="card-body">
                       <h3 class = "card-title d-flex justify-content-center">DATA VISUALIZATIONS</h3>
-                      <p class = "card-text text-center">Data Visualizations and art to better understand and interpret data.</p>
+                      <p class = "card-text text-center">Created data viz and art to better understand and interpret data</p>
                   </div>
               </a>
           </div>
